** Release Notes

1.4.90
  * changed p* commands to work with conda, venv, etc

1.4.89
  * added *_workflow commands to pbook

1.4.87
  * improved doc of pbook.retry

1.4.86
  * pflow -> pchain
  * moved the check function of pchain to server-side

1.4.85
  * making pandatools symlink for backward-compatibility when being installed standalone

1.4.84
  * fixed pflow --check for python 2

1.4.83
  * to allow phpo in workflow
  * added --check to pflow
  * added phpo.cwl

1.4.82
  * renamed pandatools to pandaclient to avoid name conflict when installed on the server-side

1.4.81
  * added --execWithRealFileNames to prun
  * added --useAthenaPackages and --relayHost to pflow

1.4.80
  * added --outDiskCount to pathena and prun

1.4.79
  * added --notExpandSecDSs to prun

1.4.78
  * added --maxLoopCount to phpo

1.4.77
  * removed --useLocalIO from job params

1.4.76
  * changed --architecture to follow https://its.cern.ch/jira/browse/CRIC-173

1.4.75
  * added --noSeparateLog to prun

1.4.74
  * fixed the 1.4.73 change

1.4.73
  * added recover_lost_files in pbook

1.4.72
  * added --parentTaskID

1.4.71
  * protection against wrong types in --loadJson

1.4.70
  * changed %RNDM to be reproducible in retries

1.4.69
  * added --mergeLog to pathena/prun
  * added manage to iDDS API

1.4.68
  * fixed --lowMinDS

1.4.65
  * to allow master, latest, and timestamp in --athenaTag

1.4.64
  * not to enforce directIO when --trf in pathena

1.4.63
  * changed definition of --maxPoints and --maxEvaluationJobs to be per segment

1.4.61
  * added PANDA_USE_NATIVE_HTTPLIB

1.4.57
  * added GUI example

1.4.56
  * added --dumpTaskParams to prun

1.4.53
  * to escape double quotes in passphrase

1.4.49
  * added --respectLB to pathena/prun

1.4.48
  * added Jupyter Lab support

1.4.47
  * fixed side effect in 1.4.46

1.4.46
  * fixed for AtlasStats

1.4.45
  * fixed OIDC stuff for python3

1.4.43
  * disabled host cert check in device code flow

1.4.42
  * for OIDC with Indigo IAM
